--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,22 @@
 {
-  "vendor": "CHANGE_ME",
-  "name": "CHANGE_ME",
-  "version": "0.0.0",
-  "title": "CHANGE_ME",
-  "description": "CHANGE_ME",
+  "vendor": "itgloberspartnercl",
+  "name": "bullets-diagramation",
+  "version": "0.0.1",
+  "title": "bullets",
+  "description": "context list bullets",
   "builders": {
     "react": "3.x",
     "messages": "1.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "store": "0.x"
   },
-  "dependencies": {},
-  "registries": [
-    "smartcheckout"
-  ],
+  "dependencies": {
+    "vtex.native-types": "0.x",
+    "vtex.list-context": "0.x",
+    "vtex.device-detector": "0.x",
+    "vtex.css-handles": "0.x"
+  },
+  "registries": ["smartcheckout"],
   "policies": [],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
